--- a/Music-Genre-Classification-Django-master/predictor/templates/music/index.html
+++ b/Music-Genre-Classification-Django-master/predictor/templates/music/index.html
@@ -1,13 +1,13 @@
-{% extends 'music/base.html' %}
-{% load static %}
+{% extends 'music/base.html' %} {% load static %}
 
-	<!-- Favicon  -->
- <link rel="icon" href="{% static 'music/images/headphone.png' %}">
+<!-- Favicon  -->
+<link rel="icon" href="{% static 'music/images/headphone.png' %}">
 </head>
+
 <body data-spy="scroll" data-target=".fixed-top">
 
     <!-- Preloader -->
-	<div class="spinner-wrapper">
+    <div class="spinner-wrapper">
         <div class="spinner">
             <div class="bounce1"></div>
             <div class="bounce2"></div>
@@ -18,7 +18,7 @@
 
 
 
-{% block content %}
+    {% block content %}
     <!-- Header -->
     <header id="header" class="header">
         <div class="header-content">
@@ -26,23 +26,29 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <div class="text-container">
-                            <h4>A music genre classification for 
+                            <h4>Dhun is a music genre classification engine for
                                 <span id="js-rotating">
                                     , METAL, DISCO, CLASSICAL, HIPHOP, JAZZ, COUNTRY, POP, BLUES, REGGAE, ROCK
                                 </span>
                             </h4>
                             <a class="btn-solid-lg page-scroll mt-4" href="#basic-2"><i class="fas fa-headphones"></i> GET STARTED</a>
-                        </div>				
+                        </div>
 
-					<div class="col-lg-5">
-                        <div class="image-container">
-                            <img class="img-fluid" src="{% static 'music/images/guitar.png' %}" alt="alternative">
-                        </div> <!-- end of image-container -->
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of header-content -->
-    </header> <!-- end of header -->
+                        <div class="col-lg-5">
+                            <div class="image-container">
+                                <img class="img-fluid" src="{% static 'music/images/guitar.png' %}" alt="alternative">
+                            </div>
+                            <!-- end of image-container -->
+                        </div>
+                        <!-- end of col -->
+                    </div>
+                    <!-- end of row -->
+                </div>
+                <!-- end of container -->
+            </div>
+            <!-- end of header-content -->
+    </header>
+    <!-- end of header -->
     <!-- end of header -->
 
 
@@ -65,8 +71,8 @@
                     <!-- Counter -->
                     <div id="counter">
                         <div class="cell">
-                            <div class="counter-value number-count" data-count="1000"&nbsp>1</div>
-                           
+                            <div class="counter-value number-count" data-count="1000" &nbsp>1</div>
+
                             <p class="counter-info">Total Music</p>
                         </div>
 
@@ -85,19 +91,27 @@
                     </div>
                     <!-- end of counter -->
 
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of counter -->
+                </div>
+                <!-- end of col -->
+            </div>
+            <!-- end of row -->
+        </div>
+        <!-- end of container -->
+    </div>
+    <!-- end of counter -->
     <!-- end of statistics -->
 
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of form -->
+    </div>
+    <!-- end of col -->
+    </div>
+    <!-- end of row -->
+    </div>
+    <!-- end of container -->
+    </div>
+    <!-- end of form -->
     <!-- end of contact -->
 
-{% endblock %}
+    {% endblock %}
 
 </body>
 
